@@ -47,6 +47,7 @@ import java.nio.charset.StandardCharsets;
 
 public class TestParser extends LuceneTestCase {
 
+  final private static String defaultField = "contents";
   private static Analyzer analyzer;
   private static CoreParser coreParser;
   private static Directory dir;
@@ -58,7 +59,7 @@ public class TestParser extends LuceneTestCase {
     // TODO: rewrite test (this needs to set QueryParser.enablePositionIncrements, too, for work with CURRENT):
     analyzer = new MockAnalyzer(random(), MockTokenizer.WHITESPACE, true, MockTokenFilter.ENGLISH_STOPSET);
     //initialize the parser
-    coreParser = new CorePlusExtensionsParser("contents", analyzer);
+    coreParser = new CoreParser(defaultField, analyzer);
 
     BufferedReader d = new BufferedReader(new InputStreamReader(
         TestParser.class.getResourceAsStream("reuters21578.txt"), StandardCharsets.US_ASCII));
@@ -136,25 +137,6 @@ public class TestParser extends LuceneTestCase {
     assertEquals("UserInputQueryCustomField should produce 0 result ", 0, h);
   }
 
-  public void testLikeThisQueryXML() throws Exception {
-    Query q = parse("LikeThisQuery.xml");
-    dumpResults("like this", q, 5);
-  }
-
-  public void testBoostingQueryXML() throws Exception {
-    Query q = parse("BoostingQuery.xml");
-    dumpResults("boosting ", q, 5);
-  }
-
-  public void testFuzzyLikeThisQueryXML() throws Exception {
-    Query q = parse("FuzzyLikeThisQuery.xml");
-    //show rewritten fuzzyLikeThisQuery - see what is being matched on
-    if (VERBOSE) {
-      System.out.println(q.rewrite(reader));
-    }
-    dumpResults("FuzzyLikeThis", q, 5);
-  }
-
   public void testBoostingTermQueryXML() throws Exception {
     Query q = parse("BoostingTermQuery.xml");
     dumpResults("BoostingTermQuery", q, 5);
@@ -187,6 +169,10 @@ public class TestParser extends LuceneTestCase {
 
   //================= Helper methods ===================================
 
+  protected String defaultField() {
+    return defaultField;
+  }
+
   protected Analyzer analyzer() {
     return analyzer;
   }
@@ -195,14 +181,18 @@ public class TestParser extends LuceneTestCase {
     return coreParser;
   }
 
-  private Query parse(String xmlFileName) throws ParserException, IOException {
+  protected Query parse(String xmlFileName) throws ParserException, IOException {
     InputStream xmlStream = TestParser.class.getResourceAsStream(xmlFileName);
     Query result = coreParser().parse(xmlStream);
     xmlStream.close();
     return result;
   }
 
-  private void dumpResults(String qType, Query q, int numDocs) throws IOException {
+  protected Query rewrite(Query q) throws IOException {
+    return q.rewrite(reader);
+  }
+
+  protected void dumpResults(String qType, Query q, int numDocs) throws IOException {
     if (VERBOSE) {
       System.out.println("TEST: query=" + q);
     }
